--- a/public/app.html
+++ b/public/app.html
@@ -10,7 +10,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 
 	<script>
-		var socket = io.connect('https://localhost:3000');
+		var socket = io();
 
 		socket.on('connect', function (data) {
 			console.log("SocketClient","connect");
