--- a/public/app.html
+++ b/public/app.html
@@ -12,9 +12,13 @@
 	<script>
 		var socket = io();
 
-		socket.on('connect', function (data) {
-			console.log("SocketClient","connect");
+		socket.on('connect', function () {
+			console.log("SocketClient", "connect");
 		});
+
+		socket.on('data', function (data) {
+			console.log("SocketClient", "data", data);
+		})
 	</script>
 </body>
 
