--- a/public/producer.html
+++ b/public/producer.html
@@ -29,7 +29,7 @@
 			<div class="form-group">
 				<label class="sr-only">Temperature</label>
 				<div class="input-group">
-					<div class="input-group-addon">Centigrads</div>
+					<div class="input-group-addon">Temperature</div>
 					<input id="Temperature" type="number" class="form-control" placeholder="Temperature">
 					<div class="input-group-addon">°C</div>
 				</div>
@@ -37,7 +37,7 @@
 			<div class="form-group">
 				<label class="sr-only">Light</label>
 				<div class="input-group">
-					<div class="input-group-addon">Lux</div>
+					<div class="input-group-addon">Light</div>
 					<input id="Light" type="number" class="form-control" placeholder="Light">
 					<div class="input-group-addon">°L</div>
 				</div>
@@ -45,7 +45,7 @@
 			<div class="form-group">
 				<label class="sr-only">Loudness</label>
 				<div class="input-group">
-					<div class="input-group-addon">Voltage</div>
+					<div class="input-group-addon">Loudness</div>
 					<input id="Loudness" type="number" class="form-control" placeholder="Loudness">
 					<div class="input-group-addon">Vcc</div>
 				</div>
